# core-decomposition

./: Cargo.toml  README.md
src/: main.rs
